fixed issues with spacing;

--- a/css/layout.css
+++ b/css/layout.css
@@ -415,8 +415,8 @@ ul#nav li.current a { color: #F06000; }
 
 #news {
    background: #fff;
-   padding-top: 90px;
-   padding-bottom: 72px;
+   padding-top: 0px;
+   padding-bottom: 6px;
    overflow: hidden;
 }
 
@@ -983,7 +983,7 @@ call-to-action .button {
    color: #0D0D0D;
 }
 #call-to-action p span {
-	font-family: 'opensans-semibold', sans-serif; 
+	font-family: 'opensans-semibold', sans-serif;
 	color: #D8D8D8;
 }
 
@@ -1007,7 +1007,7 @@ call-to-action .button {
    padding-bottom: 66px;
 }
 #testimonials h1 {
-   font: 18px/24px 'opensans-bold', sans-serif;   
+   font: 18px/24px 'opensans-bold', sans-serif;
    text-transform: uppercase;
    letter-spacing: 3px;
    color: #fff;
